# to-dollar-index

./: .env.example  .gitignore  PRD.md  README.md  ROADMAP.md
.github/: last-rebackfill.txt
.github/workflows/: daily-collect.yml  monthly-rebackfill.yml
collector/: pyproject.toml
collector/scripts/: probe_kis.py
collector/src/collector/: config.py  database_writer.py  date_windows.py  fetch_exchange_rates.py  fetch_exchange_rates_ecos.py  fetch_real_estate.py  fetch_stock_prices.py  kis_auth.py  kis_client.py  main.py
collector/tests/: test_config.py  test_database_writer.py  test_date_windows.py  test_fetch_exchange_rates.py  test_fetch_exchange_rates_ecos.py  test_fetch_real_estate.py  test_fetch_stock_prices.py  test_kis_auth.py  test_kis_client.py  test_main.py
supabase/migrations/: 0001_initial_schema.sql  0002_seed_indicators.sql  0003_real_estate.sql  0004_minimum_wage.sql
web/: next.config.ts  package-lock.json  package.json  vitest.config.ts
web/src/app/: layout.tsx  page.tsx
web/src/components/: DataFreshnessBadge.tsx  IndicatorCard.tsx  RangeReturnPanel.tsx  StatTile.tsx
web/src/components/__tests__/: rangeReturnFormat.test.ts
web/src/components/charts/: DualCurrencyChart.tsx  EChartsBase.tsx  ExchangeRateChart.tsx
web/src/lib/: chartRange.ts  dataFreshness.ts  exchangeRateStats.ts  formatReturns.ts  indicatorQueries.ts  indicatorSummary.ts  rangeReturns.ts  supabaseClient.ts  types.ts
web/src/lib/__tests__/: chartRange.test.ts  dataFreshness.test.ts  exchangeRateStats.test.ts  indicatorQueries.test.ts  indicatorSummary.test.ts  (+2 more)
(+2 files in other folders)
